part2/2.04/project-frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
